tests/e2e-targetallocator-cr/targetallocator-networkpolicy/02-disable-networkpolicy.yaml
apiVersion: opentelemetry.io/v1alpha1
kind: TargetAllocator
metadata:
  name: np
spec:
  networkPolicy:
    enabled: false
  scrapeConfigs:
    - job_name: prometheus
      static_configs:
      - targets: [ "localhost:9090" ]
