tests/e2e-targetallocator-cr/targetallocator-networkpolicy/02-error.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-targetallocator-networkpolicy
